# bevy_seedling_observer_repro

./: Cargo.toml  README.md
crates/bevy_app_ext/: Cargo.toml
crates/bevy_app_ext/src/: lib.rs
crates/dev_tools/: Cargo.toml
crates/dev_tools/src/: inspector.rs  lib.rs  ui.rs  wireframe.rs
crates/sound_config/: Cargo.toml
crates/sound_config/src/: lib.rs
crates/sound_effect/: Cargo.toml
crates/sound_effect/assets/DARKOMEN/SOUND/H/: BIRDS.H
crates/sound_effect/examples/: basic.rs
crates/sound_effect/helpers/: camera_controller.rs
crates/sound_effect/src/: asset.rs  bevy_seedling_impl.rs  lib.rs  sound_effects.rs  sound_extension.rs
