[package]
name = "dev_tools"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
debug = []
default = []
reflect = ["dep:bevy_reflect"]

[dependencies]
# Member dependencies.
bevy_app_ext.workspace = true

# External dependencies: Bevy engine.
bevy_app.workspace = true
bevy_camera.workspace = true
bevy_color.workspace = true
bevy_ecs.workspace = true
bevy_gizmos.workspace = true
bevy_input.workspace = true
bevy_pbr.workspace = true
bevy_reflect = { workspace = true, optional = true }
bevy_render.workspace = true
bevy_transform.workspace = true
bevy_ui.workspace = true
bevy_ui_render = { workspace = true, features = ["bevy_ui_debug"] }

# External dependencies: Other.
bevy_egui.workspace = true
bevy_enhanced_input.workspace = true
bevy-inspector-egui.workspace = true
